# Strawberry-Fields

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TO-DO  global.cc  global.h  llvm-toolchain-macos.cmake  main.cc  optimal_covering.txt  optimizer.cc  optimizer.h  rectangle.cc  rectangle.h  shade.cc  shade.h  strawberries.txt
